--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -32,3 +32,11 @@ footer p {
 .box-shadow {
     box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .05);
 }
+
+/* Styles for the input */
+div.ReactTags__tagInput {
+    width: 200px;
+    border-radius: 2px;
+    display: inline-block;
+}
+
